--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="quiz-box">
-      <h1>🤓 Meme Quiz: HTML CSS JS</h1>
+      <h1>Quiz Dongo: HTML CSS JS</h1>
       <div id="timer">⏳ 10</div>
       <div id="quiz"></div>
       <div id="result"></div>
