--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="menu">
-    <h1 class="title">Welcome to the Mini Quiz!</h1>
-    <p class="desc">Gas uji pemahaman lu tentang yang udah di ajarin di depakto woiii</p>
-    <a href="quiz.html" class="button">Start Quiz</a>
+    <h1 class="title">Welcome to the Mini Quizz!</h1>
+    <p class="desc">Gas uji pemahaman lu tentang yang udah di ajarin di depakto yaach guyss</p>
+    <a href="quiz.html" class="button">Start Quizz</a>
   </div>
 </body>
 </html>
