--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="quiz-box">
-    <h1>Quiz Dongoo: HTML CSS JS</h1>
+    <h1>Quiz Dongo: HTML CSS JS</h1>
     <div id="timer">⏳ 30</div>
     <div id="question"></div>
     <div id="options"></div>
