--- a/quiz.html
+++ b/quiz.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <title>Mini Quiz Meme Style</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiz DONGO</title>
+
   <link rel="stylesheet" href="quiz.css">
 </head>
-
 <body>
   <div class="quiz-box">
     <h1>Quiz Dongo: HTML CSS JS</h1>
@@ -21,5 +21,4 @@
 
   <script src="quiz.js"></script>
 </body>
-
 </html>
